--- a/src/main/webapp/resources/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/resources/bootstrap/css/bootstrap.css
@@ -228,6 +228,7 @@ body {
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
+  padding-top: 60px;
 }
 
 a {
@@ -414,6 +415,12 @@ a:focus {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+
+#master-row-fluid .row-fluid  {
+	height: auto;
+	min-height: 760px;
 }
 
 .row-fluid [class*="span"]:first-child {
@@ -3110,7 +3117,7 @@ table th[class*="span"],
 
 .well {
   min-height: 20px;
-  padding: 19px;
+  padding: 5px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
