--- a/src/main/webapp/resources/css/debug.css
+++ b/src/main/webapp/resources/css/debug.css
@@ -1,5 +1,5 @@
 /* loading */
-#modalWindow {display:block; position:fixed; border:0; left:0; top:0; width:100%; height:10000px; opacity:.0; filter:alpha(opacity:10); -mox-opacity:.0; z-index:999; margin: 0 auto;}
+#modalWindow {display:block; position:fixed; border:0; left:0; top:0; width:100%; height:10000px; /*background: black;*/ opacity:0.6; filter:alpha(opacity:4); -mox-opacity:.0; z-index:999; margin: 0 auto;}
 .loading {position:absolute; top:40%; left:50%; width:176px; height:142px; background:url(../images/view/loading_bg.gif) no-repeat; z-index:999999; text-align:center;}
 .img_load{margin-top:27px;}
 /*
